kubernetes/apps/observability/kube-prometheus-stack/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.f9.casa`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: authentik
          namespace: security
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: alertmanager
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.f9.casa`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9093
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: authentik
          namespace: security
