kubernetes/apps/observability/kube-prometheus-stack/app/securitypolicy.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: kube-prometheus-stack-prometheus
spec:
  extAuth:
    headersToExtAuth:
      - X-Forwarded-For # this is here so we can get the real IP
      - X-Forwarded-Proto
      - authorization
      - header-authorization
      - proxy-authorization
      - accept
      - cookie
    failOpen: false
    http:
      backendRefs:
        - group: ""
          kind: Service
          name: authelia
          namespace: default
          port: 80
      path: /api/authz/ext-authz/
      headersToBackend:
        - Remote-User
        - Remote-Groups
        - Remote-Name
        - Remote-Email
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: kube-prometheus-stack-prometheus
